completed equational theory morphism definition

--- a/Main.tex
+++ b/Main.tex
@@ -58,6 +58,7 @@
 
 \newcommand{\mybar}{\mbox{\Large \textbar}}
 \newcommand{\mypause}{\pause}
+\newcommand{\var}[1]{\mathrm{Var}(#1)}
 
 % \newenvironment{proof}[1][Proof]{\begin{trivlist}
 % \item[\hskip \labelsep {\bfseries #1}]}{\end{trivlist}}
