added ERTMS background chapter

--- a/Background.tex
+++ b/Background.tex
@@ -1,4 +1,4 @@
-\thesischapter{Background}
+\thesischapter{Background: Traditional Railway Control Systems:}
 From their birth in the 1800s to the present day, the railway and its control
 systems have seen many advances. Its control and safety has gone from being a
 completely manual human based system, to a mechanical system and finally to the electronic
