--- a/Main.tex
+++ b/Main.tex
@@ -60,6 +60,9 @@
 \newcommand{\mybar}{\mbox{\Large \textbar}}
 \newcommand{\mypause}{\pause}
 \newcommand{\var}[1]{\mathrm{Var}(#1)}
+\newcommand{\freevar}[1]{\mathrm{FreeVar}(#1)}
+
+
 
 % \newenvironment{proof}[1][Proof]{\begin{trivlist}
 % \item[\hskip \labelsep {\bfseries #1}]}{\end{trivlist}}
